versions/v1.7/modules/en/pages/virtual-machines/backup-restore.adoc
= Virtual Machine Backup, Snapshot & Restore
:description: Create, manage, and restore virtual machine backups and snapshots using the backup target and restore options
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-01-08
:page-revdate: {revdate}

[#_vm_backup_restore]
== Virtual machine backup and restore

Virtual machine backups are created from the *Virtual Machines* page. The virtual machine backup volumes will be stored in the *Backup Target* (an NFS or S3 server), and they can be used to either restore a new virtual machine or replace an existing virtual machine.

image::vm/vm-backup.png[]

[NOTE]
====
A backup target must be configured. For more information, see <<#_configuring_backup_target>>. If no backup target is set, a message prompts you to configure one.

Backup support is currently limited to {longhorn-product-name} volumes. {harvester-product-name} is unable to create backups of volumes in external storage.
====

[#_configuring_backup_target]
=== Configuring a backup target

A backup target is an endpoint used to access a backup store in {harvester-product-name}. A backup store is an NFS server or S3 compatible server that stores the backups of virtual machine volumes. The backup target can be set at `Settings > backup-target`.

The following table outlines parameters common to all backup targets.

|===
| Parameter | Type | Description

| `Type`
| string
| Type of server that stores the backups of volumes used by virtual machines. You can select either `NFS` or `S3`.

| `Refresh Interval`
| integer
| Number of seconds that {harvester-product-name} waits before syncing backups with the backupstore. When the value is `0`, backups are synced only if all backup volumes are in the `Ready` state.
|===

[tabs]
======
S3::
+
--
|===
| Parameter | Type | Description

| `Endpoint`
| string
| (Optional) Hostname or IP address of the endpoint used to access the S3 server

| `BucketName`
| string
| Name of the S3 bucket

| `BucketRegion`
| string
| AWS Region in which the S3 bucket was created

| `AccessKeyID`
| string
| First part of the access key you use to authenticate requests to AWS services (for example, `AKIAIOSFODNN7EXAMPLE`)

| `SecretAccessKey`
| string
| Second part of the access key you use to authenticate requests to AWS services (for example, `wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY`)

| Certificate
| string
| Self-signed SSL certificate of the S3 server

| VirtualHostedStyle
| boolean
| Option to use virtual-hosted–style URLs, wherein the bucket name is part of the domain name in the URL (`bucket.example.com`)
|===
--

NFS::
+
--
|===
| Parameter | Type | Description

| Endpoint
| string
| URL of the https://longhorn.io/docs/1.8.0/snapshots-and-backups/backup-and-restore/set-backup-target/#set-up-nfs-backupstore[NFS server]
|===
--
======

=== Create a Virtual Machine Backup

. Once the backup target is set, go to the `Virtual Machines` page.
. Click `Take Backup` of the virtual machine actions to create a new virtual machine backup.
. Set a custom backup name and click `Create` to create a new virtual machine backup.
+
image::vm/create-backup.png[]

*Result:* The backup is created. You will receive a notification message, and you can also go to the `Backup & Snapshot > VM Backups` page to view all virtual machine backups.

The `State` will be set to `Ready` once the backup is complete.

image::vm/vm-backup-results.png[]

Users can either restore a new virtual machine or replace an existing virtual machine using this backup.

[NOTE]
====
The network configuration of a virtual machine running an Ubuntu release later than 16.04 is likely managed by `netplan` by default. Before creating backups, you must stop the virtual machine, edit the configuration (*Edit Config -> Advanced Options*), and then restart the virtual machine. Use the following `network` settings as reference for DHCP configuration.

[,yaml]
----
network:
  ethernets:
    enp1s0:
      dhcp4: true
      dhcp6: true
      dhcp-identifier: mac
  version: 2
----

The restored virtual machine retains the machine ID of the original virtual machine. If `dhcp-identifier: mac` is not specified, the restored virtual machine receives the same IP address from the DHCP server because `netplan` uses the machine ID as the DHCP client identifier by default. This is why you must configure the `network` settings before creating backups of virtual machines running Ubuntu. Failure to do so may result in unexpected behavior and potential network conflicts.
====

[CAUTION]
====
Starting with v1.7.0, {harvester-product-name} supports backups and snapshots for Longhorn V2 Data Engine volumes.

However, deleting the latest backup of a virtual machine or enabling the {longhorn-product-name} setting https://documentation.suse.com/cloudnative/storage/latest/en/longhorn-system/settings.html#_auto_cleanup_snapshot_when_delete_backup[Auto Cleanup Snapshot When Delete Backup] blocks all subsequent operations on related volumes. This is a https://github.com/longhorn/longhorn/issues/9064[known issue] that affects operations such as volume snapshots, backups, and live migration.

No viable workaround is currently available. Resolving the blocked state requires deleting the affected volume to restore Longhorn Manager functionality.
====

=== Restore a new virtual machine using a backup

. Go to the `VM Backups` page.
. Click the `Restore Backup` button at the top right.
. Specify the new virtual machine name and click `Create`.
. A new virtual machine will be restored using the backup volumes and metadata, and you can access it from the `Virtual Machines` page.
+
image::vm/restore-vm.png[]

=== Replace an existing virtual machine using a backup

You can replace an existing virtual machine using the backup with the same virtual machine backup target.

You can choose to either delete or retain the previous volumes. By default, all previous volumes are deleted.

*Requirements:* The virtual machine must exist and is required to be in the powered-off status.

. Go to the `VM Backups` page.
. Click the `Restore Backup` button at the top right.
. Click `Replace Existing`.
. You can view the restore process from the `Virtual Machines` page.
+
image::vm/vm-restore-existing.png[]

=== Restore a new virtual machine on another {harvester-product-name} cluster

Users can now restore a new virtual machine on another cluster by leveraging the virtual machine metadata & content backup feature.

==== Prerequisites

* v1.4.0 and later: The controller automatically syncs the virtual machine images with the new cluster, except when a virtual machine image with the same name or display name already exists on the new cluster.
+
* Earlier than v1.4.0: You must <<#_uploading_vm_images_new_cluster,upload>> and configure the virtual machine images on the new cluster. Ensure that the image names and configuration are identical so that the virtual machines can be restored.

[#_uploading_vm_images_new_cluster]
==== Uploading the same virtual machine images to a new cluster

. Download the virtual machine image from the existing cluster.
+
image::vm/download-vm-image.png[]

. Decompress the downloaded image.
+
----
$ gzip -d <image.gz>
----

. Host the image on a server that is accessible to the new cluster.
+
Example (simple HTTP server):
+
----
$ python -m http.server
----

. Check the existing image name (normally starts with `image-`) and create the same one on the new cluster.
+
[,shell]
----
$ kubectl get vmimages -A
NAMESPACE   NAME                               DISPLAY-NAME                              SIZE         AGE
default     image-79hdq                        focal-server-cloudimg-amd64.img           566886400    5h36m
default     image-l7924                        harvester-v1.0.0-rc2-amd64.iso            3964551168   137m
default     image-lvqxn                        opensuse-leap-15.3.x86_64-nocloud.qcow2   568524800    5h35m
----

. Apply a `VirtualMachineImage` YAML with the same name and configuration in the new cluster.
+
Example:
+
----
$ cat <<EOF | kubectl apply -f -
apiVersion: harvesterhci.io/v1beta1
kind: VirtualMachineImage
metadata:
  name: image-79hdq
  namespace: default
spec:
  displayName: focal-server-cloudimg-amd64.img
  pvcName: ""
  pvcNamespace: ""
  sourceType: download
  url: https://<server-ip-to-host-image>:8000/<image-name>
EOF
----
+
[IMPORTANT]
====
{harvester-product-name} can restore virtual machines only if the image name and configuration on both old and new clusters are identical.
====

==== Restore a new virtual machine in a new cluster

. Setup the same backup target in a new cluster. And the backup controller will automatically sync the backup metadata to the new cluster.
. Go to the `VM Backups` page.
. Select the synced virtual machine backup metadata and choose to restore a new virtual machine with a specified virtual machine name.
. A new virtual machine will be restored using the backup volumes and metadata. You can access it from the `Virtual Machines` page.

[#_vm_snapshot_restore]
== Virtual machine snapshot and restore

Virtual machine snapshots are created from the *Virtual Machines* page. The virtual machine snapshot volumes will be stored in the cluster, and they can be used to either restore a new virtual machine or replace an existing virtual machine.

image::vm/vm-snapshot.png[]

=== Create a Virtual Machine Snapshot

. Go to the `Virtual Machines` page.
. Click `Take VM Snapshot` of the VM actions to create a new virtual machine snapshot.
. Set a custom snapshot name and click `Create` to create a new virtual machine snapshot.
+
image::vm/create-snapshot.png[]

*Result:* The snapshot is created. You can also go to the `Backup & Snapshot > virtual machine Snapshots` page to view all VM snapshots.

The `State` will be set to `Ready` once the snapshot is complete.

image::vm/vm-snapshot-results.png[]

Users can either restore a new virtual machine or replace an existing virtual machine using this snapshot.

[NOTE]
====
The network configuration of a virtual machine running an Ubuntu release later than 16.04 is likely managed by `netplan` by default. Before creating backups, you must stop the virtual machine, edit the configuration (*Edit Config -> Advanced Options*), and then restart the virtual machine. Use the following `network` settings as reference for DHCP configuration.

[,yaml]
----
network:
  ethernets:
    enp1s0:
      dhcp4: true
      dhcp6: true
      dhcp-identifier: mac
  version: 2
----

The restored virtual machine retains the machine ID of the original virtual machine. If `dhcp-identifier: mac` is not specified, the restored virtual machine receives the same IP address from the DHCP server because `netplan` uses the machine ID as the DHCP client identifier by default. This is why you must configure the `network` settings before creating backups of virtual machines running Ubuntu. Failure to do so may result in unexpected behavior and potential network conflicts.
====

[CAUTION]
====
Starting with v1.7.0, {harvester-product-name} supports backups and snapshots for Longhorn V2 Data Engine volumes.

However, deleting the latest backup of a virtual machine blocks all subsequent operations on related volumes. This is a https://github.com/longhorn/longhorn/issues/9064[known issue] that affects operations such as volume snapshots, backups, and live migration.

No viable workaround is currently available. Resolving the blocked state requires deleting the affected volume to restore Longhorn Manager functionality.
====

=== Restore a new virtual machine using a snapshot

. Go to the `VM Snapshots` page.
. Click the `Restore Snapshot` button at the top right.
. Specify the new virtual machine name and click `Create`.
. A new virtual machine will be restored using the snapshot volumes and metadata, and you can access it from the `Virtual Machines` page.
+
image::vm/restore-vm-snapshot.png[]

=== Replace an existing virtual machine using a snapshot

You can replace an existing virtual machine using the snapshot.

[NOTE]
====
You can only choose to retain the previous volumes.
====

. Go to the `VM Snapshots` page.
. Click the `Restore Snapshot` button at the top right.
. Click `Replace Existing`.
. You can view the restore process from the `Virtual Machines` page.
+
image::vm/restore-vm-snapshot-existing.png[]

== Virtual Machine Snapshot Space Management

Volumes consume extra disk space in the cluster whenever you create a new virtual machine backup or snapshot. To manage this, you can configure space usage limits at the namespace and virtual machine levels. The configured values represent the maximum amount of disk space that can be used by all backups and snapshots. No limits are set by default.

=== Configure the Snapshot Space Usage Limit at the Namespace Level

. Go to the *Namespaces* screen.
+
. Locate the target namespace, and then select *⋮ -> Edit Quota*.
+
image::vm/edit-quota-namespace.png[]
+
. Specify the maximum amount of disk space that can be consumed by all snapshots in the namespace, and then and click *Save*.
+
image::vm/edit-quota-namespace-save.png[]
+
. Verify that the configured value is displayed on the *Namespaces* screen.
+
image::vm/edit-quota-namespace-read.png[]

=== Configure the Snapshot Space Usage Limit at the Virtual Machine Level

. Go to the *Virtual Machines* screen.
+
. Locate the target virtual machine, and then select *⋮ -> Edit VM Quota*.
+
image::vm/edit-quota-vm.png[]
+
. Specify the maximum total amount of disk space that can be consumed by all snapshots for the virtual machine, and then and click *Save*.
+
image::vm/edit-quota-vm-save.png[]
+
. Verify that the configured value is displayed on the *Quotas* tab of the virtual machine details screen.
+
image::vm/edit-quota-vm-read.png[]

== Filesystem freeze for virtual machine backups and snapshots

When a guest virtual machine is connected with the *QEMU Guest Agent*, the {harvester-product-name} controller performs filesystem freeze operations through Kubevirt's https://github.com/kubevirt/kubevirt/blob/main/docs/freeze.md#virt-freezer[virt-freezer] application to ensure filesystem consistency during virtual machine backups and snapshots.

This feature is particularly valuable for virtual machines with high I/O activity or critical data that requires point-in-time consistency guarantees.

=== Prerequisites

Filesystem freeze and thaw functionality depends on virtual machine configuration, which is _not controlled by {harvester-product-name}_. You must ensure that virtual machines are configured correctly and support the required libvirt commands.

* *Red Hat Enterprise Linux (RHEL)* and *SUSE Linux Enterprise (SLE) Micro*: These systems may lack sufficient permissions for filesystem freeze operations by default. You may be required to create custom SELinux policies.

* *Windows*: Filesystem freeze operations are available on these systems only when the Volume Shadow Copy Service (VSS) service is enabled.

[NOTE]
====
When the virt-freezer application is triggered, KubeVirt communicates with the QEMU Guest Agent to translate operating system-specific calls. Linux systems use fsfreeze syscalls, while Windows systems use VSS APIs.
====

=== Verifying filesystem freeze compatibility

To verify that your virtual machine supports filesystem freeze operations, perform the following steps:

. Access the virtual machine's virt-launcher `compute` container.
+
[,bash]
----
POD=$(kubectl get pods -n default \
  -l vm.kubevirt.io/name=vm1 \
  -o jsonpath='{.items[0].metadata.name}')
kubectl exec -it $POD -n default -c compute -- bash
----

. Attempt to freeze the filesystem using the virt-freezer application, which is available in the `compute` container:
+
[,bash]
----
virt-freezer --freeze --namespace <VM namespace> --name <VM name>
----

. Verify the result of the freeze operation.
+
[IMPORTANT]
====
Do not skip this step. In addition, you must thaw virtual machine filesystems before performing any other operations.
====

=== Troubleshooting filesystem freeze issues

==== Filesystem freeze error due to insufficient permissions

A `Failed to freeze filesystem` error may cause backup or snapshot failures on some Linux distributions.

This issue typically occurs when SELinux denies read access to the QEMU Guest Agent (`qemu-ga`). You can verify the cause using the following steps:

. [Verify that your virtual machine supports filesystem freeze operations](#verifying-filesystem-freeze-compatibility).

. Check for SELinux `Permission denied` errors in the system logs.
+
If you see a message similar to the following, SELinux is blocking the required access:
+
[,console]
----
{"component":"freezer","level":"error","msg":"Freezing VMI failed","reason":"server error. command Freeze failed: \"LibvirtError(Code=1, Domain=10, Message='internal error: unable to execute QEMU agent command 'guest-fsfreeze-freeze': failed to open /data: Permission denied')\""}
----

To resolve the issue, you must create and install a custom SELinux policy module. This solution has been verified to work with *RHEL* and *SLE Micro*.

[CAUTION]
====
Using `audit2allow` may grant broad permissions, as it allows all actions found in the logs. Carefully review the generated policy, or consider mounting volumes with appropriate SELinux labels for enhanced security.
====

. Generate a custom SELinux policy module from audit logs.
+
[,bash]
----
grep qemu-ga /var/log/audit/audit.log | audit2allow -M my_qemu_ga
----

. Install the generated policy module.
+
[,bash]
----
semodule -i my_qemu_ga.pp
----

. Repeat steps 1 and 2 until *virt-freezer* can successfully freeze the filesystems.
+
[IMPORTANT]
====
You must thaw virtual machine filesystems before performing other operations.

[,bash]
----
virt-freezer --unfreeze --namespace <VM namespace> --name <VM name>
----
====

[#_scheduled_vm_backups_snapshots]
== Scheduled virtual machine backups and snapshots

{harvester-product-name} supports the creation of virtual machine backups and snapshots on a scheduled basis, with the option to retain a specific number of backups and snapshots. You can suspend, resume, and update the schedule at runtime.

=== Create the Virtual Machine Schedule

. Go to the *Virtual Machine Schedules* screen, and then click *Create Schedule*.
+
image::vm/create-schedule.png[]
+
. Configure the following settings:
+
image::vm/configure-schedule.png[]
+
** *Type*: Select either *Backup* or *Snapshot*.
+
** *Namespace* and *Virtual Machine Name*: Specify the namespace and name of the source virtual machine.
+
** *Cron Schedule*: Specify the cron expression (a string consisting of fields separated by whitespace characters) that defines the schedule properties.
+
[IMPORTANT]
====
The backup or snapshot creation interval must be *at least one hour*. Frequent backup or snapshot deletion results in heavy I/O load.

If two schedules have the same granularity level, each iteration's timing offset must be *at least 10 minutes*.
====
+
** *Retain*: Specify the number of up-to-date backups or snapshots to be retained.
+
When this value is exceeded, the {harvester-product-name} controller deletes the oldest backups or snapshots, and Longhorn starts the snapshot purge.
+
** *Max Failure*: Specify the maximum number of consecutive failed backup or snapshot creation attempts to be allowed.
+
When this value is exceeded, the {harvester-product-name} controller suspends the schedule.
+
. Click *Create*.

=== Check the Status of a Virtual Machine Schedule

. Go to the *Virtual Machine Schedules* screen.
+
. Locate the target schedule, and then click the name to open the details screen.
+
. On the *Basics* tab, verify that the settings are correct.
+
image::vm/check-schedule-basic.png[]
+
. On the *Backups* tab, check the status of the backups or snapshots that were created according to the schedule.
+
image::vm/check-schedule-backups.png[]
+
Backups and snapshots that are marked *Ready* can be used to restore the source virtual machine. For more information, see <<#_vm_backup_restore>> and <<#_vm_snapshot_restore>>.
+
image::vm/check-schedule-restore.png[]

=== Edit a Virtual Machine Schedule

. Go to the *Virtual Machine Schedules* screen.
+
. Locate the target schedule, and then select *⋮ -> Edit Config*.
+
image::vm/edit-schedule-config.png[]
+
. Edit the *Cron Schedule*, *Retain*, or *Max Failure* values.
+
image::vm/edit-schedule-parameters.png[]
+
. Click *Save* to apply the changes.

=== Suspend or Resume a Virtual Machine Schedule

You can suspend active schedules and resume suspended schedules.

. Go to the *Virtual Machine Schedules* screen.
+
. Locate the target schedule, and then select *⋮ -> Suspend* or *Resume*.
+
image::vm/suspend-resume-schedule.png[]
+
The schedule is automatically suspended when the number of consecutive failed backup or snapshot creation attempts exceeds the *Max Failure* value.
+
{harvester-product-name} does not allow you to resume a suspended schedule for backup creation if the backup target is not reachable.

[NOTE]
====
If a schedule was automatically suspended because the *Max Failure* value was exceeded, you must explicitly resume that schedule after verifying that the backup or snapshot can be created successfully. For example, when the backup target becomes reachable again after a period of disconnection, you can first create a backup manually and check the result.
====

=== Virtual Machine Operations and {harvester-product-name} Upgrades

Before you upgrade {harvester-product-name}, ensure that no virtual machine backups or snapshots are in use, and that all virtual machine schedules are suspended. The {harvester-product-name} UI displays the following error messages when upgrade attempts are rejected:

* Virtual machine backups or snapshots are being created, deleted, or used during the upgrade attempt
+
image::vm/upgrade-vmbackup.png[]
+
* Virtual machine schedules are active during the upgrade attempt
+
image::vm/upgrade-svmbackup.png[]

To avoid such issues, SUSE plans to implement automatic suspension of all virtual machine schedules before the upgrade process is started. The suspended schedules will also be automatically resumed after the upgrade is completed. For more information, see https://github.com/harvester/harvester/issues/6759[Issue #6759].

[CAUTION]
====
{longhorn-product-name} has a similar feature called https://longhorn.io/docs/1.10.0/snapshots-and-backups/scheduling-backups-and-snapshots/[recurring snapshots and backups], which uses recurring jobs to create periodic snapshots or backups of {longhorn-product-name} volumes. This feature is not integrated into {harvester-product-name} because it conflicts with certain operations (for example, virtual machine attachment and cluster upgrades). Recurring {longhorn-product-name} snapshot and backup jobs can also generate heavy I/O without {harvester-product-name}'s awareness, and in some cases, even destabilize the cluster.

For best results, use the <<#_scheduled_vm_backups_snapshots>> feature in {harvester-product-name}, which has safeguard mechanisms that mitigate heavy I/O when possible. Again, {harvester-product-name} does not support recurring {longhorn-product-name} snapshots and backups.
====
